[gd_scene load_steps=8 format=3 uid="uid://biw1l5wvijj0v"]

[ext_resource type="Script" path="res://Scenes/Game/Shop.gd" id="1"]
[ext_resource type="FontFile" uid="uid://6eajnwb5v8sn" path="res://Fonts/Aldrich-Regular.ttf" id="2"]
[ext_resource type="Resource" uid="uid://lc5uq2e6ldah" path="res://Scenes/InventoryPD/Items/Pistol.tres" id="2_mhlal"]
[ext_resource type="Resource" uid="uid://b0iw131oy32gt" path="res://Scenes/InventoryPD/Items/Rifle.tres" id="3_wb1vu"]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Shop" type="CanvasLayer"]
visible = false
script = ExtResource("1")
pistol_data = ExtResource("2_mhlal")
rifle_data = ExtResource("3_wb1vu")

[node name="Bg" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color(0, 0, 0, 0.647059)

[node name="CloseBuyMenuBtn" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -99.0
offset_top = 50.0
offset_right = -49.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("3")
text = "X"
flat = true

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 428.0
offset_top = 209.0
offset_right = -428.0
offset_bottom = -209.0
columns = 5

[node name="PistolBuyBtn" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource("1")
text = "Pistol"

[node name="RifleBuyBtn" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = SubResource("2")
text = "Rifle"

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button5" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button6" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button7" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button8" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button9" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button10" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button11" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button12" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button13" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button14" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button15" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button16" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button17" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button18" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button19" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button20" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="mouse_entered" from="Bg" to="." method="open_buy_menu"]
[connection signal="pressed" from="CloseBuyMenuBtn" to="." method="_on_CloseBuyMenuBtn_pressed"]
[connection signal="mouse_entered" from="GridContainer" to="." method="open_buy_menu"]
[connection signal="pressed" from="GridContainer/PistolBuyBtn" to="." method="_on_PistolBuyBtn_pressed"]
[connection signal="pressed" from="GridContainer/RifleBuyBtn" to="." method="_on_RifleBuyBtn_pressed"]
